--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           build-args: |
             RUBY_VERSION=${{ matrix.ruby_version }}
             NODE_VERSION=${{ matrix.node_version }}
-          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7,linux/arm/v6
+          platforms: linux/arm/v6,linux/arm64/v8,linux/arm/v7,linux/ppc64le,linux/amd64,linux/s390x
           tags: ${{ matrix.ruby_version }}-${{ matrix.node_version }}-alpine
 
       - name: Test image
