--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ jobs:
   docker-build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         ruby_version: [3.0.0, 3.0.1, 3.0.2, 3.0.3]
         node_version: [16.13.0, 16.13.1]
