--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,19 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Docker Buildx
+      - name: Build local image
+        uses: docker/build-push-action@v2
+        with:
+          load: true
+          build-args: |
+            RUBY_VERSION=${{ matrix.ruby_version }}
+            NODE_VERSION=${{ matrix.node_version }}
+          tags: ruby-node-alpine:${{ matrix.ruby_version }}-${{ matrix.node_version }}-alpine
+
+      - name: Test image
+        run: docker run -i ruby-node-alpine:${{ matrix.ruby_version }}-${{ matrix.node_version }}-alpine /bin/sh -c "ruby --version && node --version"
+
+      - name: Build & push for all platforms
         uses: docker/build-push-action@v2
         with:
           push: false
@@ -28,6 +40,3 @@ jobs:
             NODE_VERSION=${{ matrix.node_version }}
           platforms: linux/arm/v6,linux/arm64,linux/arm/v7,linux/ppc64le,linux/amd64
           tags: ruby-node-alpine:${{ matrix.ruby_version }}-${{ matrix.node_version }}-alpine
-
-      - name: Test image
-        run: docker run -i ruby-node-alpine:${{ matrix.ruby_version }}-${{ matrix.node_version }}-alpine /bin/sh -c "ruby --version && node --version"
