--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,21 @@ jobs:
       - name: Test image
         run: docker run -i ruby-node-alpine:${{ matrix.ruby_version }}-${{ matrix.node_version }}-alpine /bin/sh -c "ruby --version && node --version"
 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        env:
+          token: ${{ secrets.DOCKERHUB_TOKEN }}
+        if: "${{ env.token != '' }}"
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build & push for all platforms
         uses: docker/build-push-action@v2
+        env:
+          token: ${{ secrets.DOCKERHUB_TOKEN }}
         with:
-          push: false
+          push: "${{ env.token != '' }}"
           build-args: |
             RUBY_VERSION=${{ matrix.ruby_version }}
             NODE_VERSION=${{ matrix.node_version }}
