--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,9 @@ jobs:
           tags: ruby-node-alpine:${{ matrix.ruby_version }}-${{ matrix.node_version }}-alpine
 
       - name: Test image
-        run: docker run -i ruby-node-alpine:${{ matrix.ruby_version }}-${{ matrix.node_version }}-alpine /bin/sh -c "ruby --version && node --version"
+        run: |
+          docker run -i ruby-node-alpine:${{ matrix.ruby_version }}-${{ matrix.node_version }}-alpine \
+            /bin/sh -c "ruby --version && node --version && yarn --version"
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
